fixed input text size on mobile

--- a/style.css
+++ b/style.css
@@ -235,6 +235,10 @@ input:focus::-ms-input-placeholder {
         margin: -1em 0 0 0;
     }
 
+    .container-form-input {
+        font-size: 1.5em;
+    }
+
     .accordion-section {
         width: 100%;
         position: static;
